--- a/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
+++ b/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
@@ -1,80 +1,90 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Real or Not? NLP with Disaster Tweets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "train = pd.read_csv('train.csv')\n",
-    "test = pd.read_csv('test.csv')"
+    "train = pd.read_csv('/Users/cyrilgebara/Desktop/IE main/Term 3/NLP/ASS1/nlp-getting-started/train.csv')\n",
+    "test = pd.read_csv('/Users/cyrilgebara/Desktop/IE main/Term 3/NLP/ASS1/nlp-getting-started/test.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Data Exploration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"What's up man?\""
+       "'this is ridiculous....'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[train[\"target\"] == 0][\"text\"].values[0]"
+    "train[train[\"target\"] == 0][\"text\"].values[5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Our Deeds are the Reason of this #earthquake May ALLAH Forgive us all'"
+       "'Just got sent this photo from Ruby #Alaska as smoke from #wildfires pours into a school '"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train[train[\"target\"] == 1][\"text\"].values[0]"
+    "train[train[\"target\"] == 1][\"text\"].values[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ACarewornHeart Have a good un fella sorry I wo n't be there to get annihilated with you\n",
-      "@ACarewornHeart Have a good un fella sorry I won't be there to get annihilated with you :(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23657310>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from textblob import TextBlob\n",
-    "\n",
-    "def form_sentence(tweet):\n",
-    "    tweet_blob = TextBlob(tweet)\n",
-    "    return ' '.join(tweet_blob.words)\n",
-    "\n",
-    "print(train['text'].iloc[217])\n",
-    "print(form_sentence(train['text'].iloc[217]))"
+    "import seaborn as sns\n",
+    "sns.countplot(x= 'target',data = train)"
    ]
   },
   {
@@ -83,23 +93,428 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "7613"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id             0\n",
+       "keyword       61\n",
+       "location    2533\n",
+       "text           0\n",
+       "target         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " train.isnull().sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3263"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id             0\n",
+       "keyword       26\n",
+       "location    1105\n",
+       "text           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.isnull().sum(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After looking at the NAs we see that the \"location\" has around 33% of missing values in both datasets\n",
+    "so in our opinion it is better to drop this column\n",
+    "Moreover, the keyword column has less than 1% of missing values so we will keep it in case it will be useful in the future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del train['location']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del test['location']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The dataset has a lot of unstructured tweets which should be \"cleaned\" in order to make an NLP model\n",
+    "Removing punctuations, stop words will save more computational power  and give us a higher accuracy since they are not related to sentiments.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1- Expanding shortened words (don't to do not)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Tommy, the below improting takes time becuase we are loading twitter 25 which is a specific number, \n",
+    "## I google but got 2B tweetss for twitter-25 and twitter-100, so no lo se\n",
+    "## DO NOT REMOVE STOP WORDS, DONT IS IMPORTANT FOR NEGATION, filter?\n",
+    "## WHAT TO DO WITH WEBSITES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create new feature for link yes or no, deletin links, dont use keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"what's\", 'up', 'man', '?']\n",
-      "['i', 'love', 'fruits']\n",
-      "['summer', 'is', 'lovely']\n",
-      "['my', 'car', 'is', 'so', 'fast']\n",
-      "['what', 'a', 'goooaaal', '!', '!', '!']\n"
+      "I'm on top of the hill and I can see a fire in the woods...\n",
+      "I am on top of the hill and I can see a fire in the woods...\n"
      ]
     }
    ],
    "source": [
-    "from nltk.tokenize import TweetTokenizer\n",
-    "tweet_tokenizer = TweetTokenizer(preserve_case=False, strip_handles=True, reduce_len=True)\n",
-    " \n",
-    "for tweet in train[train[\"target\"] == 0][\"text\"][:5]:\n",
-    "    print (tweet_tokenizer.tokenize(tweet))"
+    "from pycontractions import Contractions\n",
+    "import gensim.downloader as api\n",
+    "\n",
+    "model = api.load(\"glove-twitter-25\")\n",
+    "cont = Contractions(kv_model=model)\n",
+    "cont.load_models()\n",
+    "\n",
+    "\n",
+    "def expand_contractions(text):\n",
+    "    text = list(cont.expand_texts([text], precise=True))[0]\n",
+    "    return text\n",
+    "\n",
+    "print(train['text'].iloc[7])\n",
+    "print(expand_contractions(train['text'].iloc[7]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2- Removal of punctuations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "delete the @"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13,000 people receive #wildfires evacuation orders in California \n",
+      "13,000 people receive wildfires evacuation orders in California\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Our dataset is related to tweets so we will have a lot of @ and # \n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "def punctuations(tweet):\n",
+    "    tweet_blob = TextBlob(tweet)\n",
+    "    return ' '.join(tweet_blob.words)\n",
+    "\n",
+    "print(train['text'].iloc[3])\n",
+    "print(punctuations(expand_contractions(train['text'].iloc[3])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3- Removal of accented characters (café to cafe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#raining #flooding #Florida #TampaBay #Tampa 18 or 19 days. I've lost count \n",
+      "raining flooding Florida TampaBay Tampa 18 or 19 days I have lost count\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in this dataset we do not have accented characters, this function will be used in case we are analyzing tweets \n",
+    "# from France or any country that has accented characters in their languages\n",
+    "import unidecode\n",
+    "\n",
+    "def remove_accented_chars(text):\n",
+    "    text = unidecode.unidecode(text)\n",
+    "    return text\n",
+    "\n",
+    "print(train['text'].iloc[12])\n",
+    "print(punctuations(expand_contractions(remove_accented_chars(train['text'].iloc[12]))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4- Removal of commonly used words and stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's up man?\n",
+      "['man']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "import re\n",
+    "\n",
+    "def common_stopwords(tweet):\n",
+    "    tweet_list = [ele for ele in tweet.split() if ele != 'user']\n",
+    "    clean_tokens = [t for t in tweet_list if re.match(r'[^\\W\\d]*$', t)]\n",
+    "    clean_s = ' '.join(clean_tokens)\n",
+    "    clean_mess = [word for word in clean_s.split() if word.lower() not in stopwords.words('english')]\n",
+    "    return clean_mess\n",
+    "\n",
+    "print(train['text'].iloc[15])\n",
+    "print(common_stopwords((punctuations(expand_contractions(train['text'].iloc[15])))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5- Word Normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#raining #flooding #Florida #TampaBay #Tampa 18 or 19 days. I've lost count \n",
+      "['rain', 'flood', 'Florida', 'TampaBay', 'Tampa', 'days', 'lose', 'count']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
+    "def normalization(tweet_list):\n",
+    "        lem = WordNetLemmatizer()\n",
+    "        normalized_tweet = []\n",
+    "        for word in tweet_list:\n",
+    "            normalized_text = lem.lemmatize(word,'v')\n",
+    "            normalized_tweet.append(normalized_text)\n",
+    "        return normalized_tweet\n",
+    "    \n",
+    "print((train['text'].iloc[12]))   \n",
+    "print(normalization(common_stopwords((punctuations(expand_contractions(train['text'].iloc[12]))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
+    "\n",
+    "count_vectorizer = feature_extraction.text.CountVectorizer()\n",
+    "\n",
+    "## let's get counts for the first 5 tweets in the data\n",
+    "example_train_vectors = count_vectorizer.fit_transform(train[\"text\"][0:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 54)\n",
+      "[[0 0 0 1 1 1 0 0 0 0 0 0 1 1 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 1 0\n",
+      "  0 0 0 1 0 0 0 0 0 0 0 0 0 1 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## we use .todense() here because these vectors are \"sparse\" (only non-zero elements are kept to save space)\n",
+    "print(example_train_vectors[0].todense().shape)\n",
+    "print(example_train_vectors[0].todense())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_vectors = count_vectorizer.fit_transform(train[\"text\"])\n",
+    "\n",
+    "## note that we're NOT using .fit_transform() here. Using just .transform() makes sure\n",
+    "# that the tokens in the train vectors are the only ones mapped to the test vectors - \n",
+    "# i.e. that the train and test vectors use the same set of tokens.\n",
+    "test_vectors = count_vectorizer.transform(test[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Our vectors are really big, so we want to push our model's weights\n",
+    "## toward 0 without completely discounting different words - ridge regression \n",
+    "## is a good way to do this.\n",
+    "clf = linear_model.RidgeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.59421842, 0.56455572, 0.64149093])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = model_selection.cross_val_score(clf, train_vectors, train[\"target\"], cv=3, scoring=\"f1\")\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.pipeline import Pipeline\n",
+    "# from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "\n",
+    "# pipeline = Pipeline([\n",
+    "#     ('bow',CountVectorizer(analyzer=text_processing)),  # strings to token integer counts\n",
+    "#     ('tfidf', TfidfTransformer()),  # integer counts to weighted TF-IDF scores\n",
+    "#     ('classifier', MultinomialNB()),  # train on TF-IDF vectors w/ Naive Bayes classifier\n",
+    "# ])"
    ]
   }
  ],
