--- a/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
+++ b/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
@@ -435,15 +435,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#raining #flooding #Florida #TampaBay #Tampa 18 or 19 days. I've lost count \n",
-      "raining flooding Florida TampaBay Tampa 18 or 19 days I have lost count\n"
+      "13,000 people receive #wildfires evacuation orders in California \n",
+      "13,000 people receive wildfires evacuation orders in California\n"
      ]
     }
    ],
@@ -456,8 +456,8 @@
     "    text = unidecode.unidecode(text)\n",
     "    return text\n",
     "\n",
-    "print(train['text'].iloc[12])\n",
-    "print(punctuations(expand_contractions(remove_accented_chars(train['text'].iloc[12]))))"
+    "print(train['text'].iloc[3])\n",
+    "print(punctuations(expand_contractions(remove_accented_chars(train['text'].iloc[3]))))"
    ]
   },
   {
