--- a/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
+++ b/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
@@ -668,10 +668,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train['text'] = train['text'].apply(normalization)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['text'] = test['text'].apply(normalization)"
+   ]
   },
   {
    "cell_type": "code",
