--- a/Twitter_CYRILGEBARA+TOMMASOMERCALDO-Copy2.ipynb
+++ b/Twitter_CYRILGEBARA+TOMMASOMERCALDO-Copy2.ipynb
@@ -449,51 +449,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating new variables"
+    "## Data Cleaning"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# punctuation_count\n",
-    "import string\n",
-    "train['punctuation_count'] = train['text'].apply(lambda x: len([c for c in str(x) if c in string.punctuation]))\n",
-    "test['punctuation_count'] = test['text'].apply(lambda x: len([c for c in str(x) if c in string.punctuation]))\n",
-    "\n",
-    "# stop_word_count\n",
-    "from wordcloud import STOPWORDS\n",
-    "train['stop_word_count'] = train['text'].apply(lambda x: len([w for w in str(x).lower().split() if w in STOPWORDS]))\n",
-    "test['stop_word_count'] = test['text'].apply(lambda x: len([w for w in str(x).lower().split() if w in STOPWORDS]))\n",
-    "\n",
-    "# char_count\n",
-    "train['char_count'] = train['text'].apply(lambda x: len(str(x)))\n",
-    "test['char_count'] = test['text'].apply(lambda x: len(str(x)))\n",
-    "\n",
-    "# word_count\n",
-    "train['word_count'] = train['text'].apply(lambda x: len(str(x).split()))\n",
-    "test['word_count'] = test['text'].apply(lambda x: len(str(x).split()))\n",
-    "\n",
-    "# unique_word_count\n",
-    "train['unique_word_count'] = train['text'].apply(lambda x: len(set(str(x).split())))\n",
-    "test['unique_word_count'] = test['text'].apply(lambda x: len(set(str(x).split())))\n",
-    "\n",
-    "\n",
-    "# mean_word_length\n",
-    "import numpy as np\n",
-    "train['mean_word_length'] = train['text'].apply(lambda x: np.mean([len(w) for w in str(x).split()]))\n",
-    "test['mean_word_length'] = test['text'].apply(lambda x: np.mean([len(w) for w in str(x).split()]))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -507,15 +464,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1- Removing Duplicates/Fixing the mislabled targets\n",
+    "#### 1- Removing Duplicates/Fixing the mislabled targets\n",
     "\n",
-    "We realized we have a lot of retweets, so after removing the https: which means a retweet. We tried removing the duplicates but we got a score lower by 0.02, so we will just fix the mislabled targets by creating a dataframe that has the mislabled"
+    "- We realized we have a lot of retweets, so after removing the https: which means a retweet. We tried removing the duplicates but we got a score lower by 0.02, so we will just fix the mislabled targets by creating a dataframe that has the mislabled\n",
+    "\n",
+    "- The problem of the retweets as we said was that happend that one retweet had a different target value, this leads to very bad ML performance. The machine reads the same information but tries to learn having two different results, like teaching that 2 + 2 = 4 and teaching that 2 + 2 = 3, the machine can't learn properly from it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -525,7 +486,7 @@
        " \"The Prophet (peace be upon him) said 'Save yourself from Hellfire even if it is by giving half a date in charity.'\",\n",
        " 'In #islam saving a person is equal in reward to saving all humans! Islam is the opposite of terrorism!',\n",
        " 'To fight bioterrorism sir.',\n",
-       " 'Who is bringing the tornadoes and floods. Who is bringing the climate change. God is after America He is plaguing her\\n \\n#FARRAKHAN #QUOTE',\n",
+       " 'Who is bringing the tornadoes and floods. Who is bringing the climate change. God is after America He is plaguing her\\r\\n \\r\\n#FARRAKHAN #QUOTE',\n",
        " '#foodscare #offers2go #NestleIndia slips into loss after #Magginoodle #ban unsafe and hazardous for #humanconsumption',\n",
        " '#Allah describes piling up #wealth thinking it would last #forever as the description of the people of #Hellfire in Surah Humaza. #Reflect',\n",
        " 'He came to a land which was engulfed in tribal war and turned it into a land of peace i.e. Madinah. #ProphetMuhammad #islam',\n",
@@ -540,7 +501,7 @@
        " 'that horrible sinking feeling when you\\x89Ûªve been at home on your phone for a while and you realise its been on 3G this whole time']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,6 +510,13 @@
     "df_mislabeled = train.groupby(['text']).nunique().sort_values(by='target', ascending=False)\n",
     "df_mislabeled = df_mislabeled[df_mislabeled['target'] > 1]['target']\n",
     "df_mislabeled.index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- What we want to do now is to correct these inconsistencies "
    ]
   },
   {
@@ -600,7 +568,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2- Removing HTTP links"
+    "#### 2- Removing HTTP links\n",
+    "Links are very bad for interpretation, we decided to remove them from the text. At the beginning we created a new column that saved the fact that there was a link or not (0/1) but then we decided to remove it because the presence or not presence of the link related to the target variable isvery balanced and in terms of model performance, the accuracy was lower."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Number of Link/NoLink"
    ]
   },
   {
@@ -624,6 +600,13 @@
    "source": [
     "# How many http words has this text?\n",
     "train.loc[train['text'].str.contains('http')].target.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Code for removing the links"
    ]
   },
   {
@@ -668,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4- Removing usernames (@)"
+    "#### 3- Removing usernames (@)"
    ]
   },
   {
