--- a/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
+++ b/Twitter_CYRILGEBARA+TOMMASOMERCALDO.ipynb
@@ -29,8 +29,7 @@
     "* **0.8%** for `keyword` \n",
     "* **33%** for `location` \n",
     "\n",
-    "Since missing value ratios between training and test set are too close, **they are most probably taken from the same sample**. Missing values in those features are filled with `no_keyword` and `no_location` respectively.\n",
-    "Afterwords `location` is going to be removed as a feature."
+    "Since missing value ratios between training and test set are too close, they are most probably taken from the same sample. Afterwords keyword and location are going to be removed."
    ]
   },
   {
@@ -222,7 +221,9 @@
     "##### The visualization provided show on the left feature-target distribution on train, on the right feature distribution in train and test\n",
     "All of the new features have similar distributions in training and test set which also proves that training and test set are taken from the same sample.\n",
     "\n",
-    "`word_count`, `unique_word_count`, `stop_word_count`, `mean_word_length`, `char_count`, `punctuation_count` have very different distributions for disaster and non-disaster tweets. Those features might be useful in models."
+    "word_count, unique_word_count, stop_word_count, mean_word_length, char_count, punctuation_count have very different distributions for disaster and non-disaster tweets. Those features might be useful in models.\n",
+    "\n",
+    "All of the new features have information about target as well, but some of them are not good enough such as url_count, hashtag_count and mention_count. Because of this in the part we remove the missing values features (keyword, location) we are going to remove also these."
    ]
   },
   {
